--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4,7 +4,6 @@
 
 
 
-
 body,
 input,
 textarea,
@@ -412,6 +411,10 @@ h6,
 .scrollToTop_wraper {
   opacity: 0 !important;
 }
+#msg-box5-8 P {
+  text-align: left;
+  color: #ffffff;
+}
 #menu-0 .hide-buttons .nav-btn {
   display: none !important;
 }
@@ -478,9 +481,4 @@ h6,
 #menu-0 .close-icon::before,
 #menu-0 .close-icon::after {
   background-color: #ffffff;
-}
-#header1-4 .mbr-section-lead {
-  text-align: center;
-  font-size: 30px;
-  font-family: 'Montserrat', sans-serif;
 }
